--- a/resources/assets/sass/_variables.scss
+++ b/resources/assets/sass/_variables.scss
@@ -1,8 +1,22 @@
 
-// Body
-$body-bg: #f5f8fa;
-
-// Typography
-$font-family-sans-serif: "Raleway", sans-serif;
+$body-bg: #ebebeb;
+$font-family-base: Open Sans;
 $font-size-base: 0.9rem;
-$line-height-base: 1.6;
+
+$primary: #7746ec;
+
+$card-border-width: 0;
+$card-inner-border-radius: 5px;
+$card-cap-bg: #fff;
+$card-bg: #fafafa;
+
+$table-hover-bg: #f5f8fc;
+
+$modal-content-border-width: 0;
+$modal-backdrop-opacity: .7;
+
+$input-box-shadow: 0;
+$input-btn-focus-box-shadow: 0;
+$input-border-radius: 0;
+
+$tooltip-max-width: 500px;
