--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -1,61 +1,73 @@
 
 // Fonts
-@import url("https://fonts.googleapis.com/css?family=Raleway:300,400,600");
 
 // Variables
 @import "variables";
 
 // Bootstrap
 @import '~bootstrap/scss/bootstrap';
+@import "horizon";
 
-.navbar-laravel {
-  background-color: #fff;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.04);
+body{
+  font-family: 'Open Sans', sans-serif;
 }
+.appbar{
+  margin-bottom: 25px;
+  .navbar-brand{
+    color: #000;
+    font-weight: bolder;
+  }
+}
+.breadcrumb{
+  background: white;
+}
+.downloadnav{
+  .nav-link {
+    margin-bottom: 20px;
+  }
+}
+.report td {
+  padding: 6px 2px;
+}
+
+.uc{
+  text-transform: uppercase !important;
+}
+
 .sidebar-sticky{
   position: fixed;
 }
-.sidebar .nav-link .feather {
+.dashboard-nav .fa {
   margin-right: 4px;
-  color: #999;
+  color: #212529;
 }
-.feather {
+.dashboard-nav a{
+  color: #212529;
+}
+.dashboard-nav .fa {
   width: 16px;
   height: 16px;
   vertical-align: text-bottom;
 }
 .avatar {
   text-transform: uppercase !important;
-  -webkit-box-align: center;
-  -webkit-align-items: center;
-  -ms-flex-align: center;
-  align-items: center;
-  background: center/cover #d5dce0;
   border-radius: 50%;
-  box-shadow: inset 0 0 0 1px rgba(0,0,0,0.2);
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;
   color: #fff;
-  display: -webkit-inline-flex;
-  display: -ms-inline-flexbox;
   display: inline-flex;
-  -webkit-box-pack: center;
-  -webkit-justify-content: center;
-  -ms-flex-pack: center;
   justify-content: center;
-  position: relative;
-  vertical-align: top;
   font-size: 11px;
   height: 30px;
   line-height: 30px;
   width: 30px;
   background-color: #7a6ff0;
-  -webkit-flex-shrink: 0;
-  -ms-flex-negative: 0;
-  flex-shrink: 0;
   margin-right: 10px;
 }
 .comment-item{
   display: flex;
   width: 100%;
+}
+
+.navbar-icon {
+  font-size: 18px;
+  margin-top: 6px;
 }
