--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10224,3 +10224,68 @@ body {
   right: 0;
 }
 
+.modal.docked .modal-header {
+  width: 100%;
+  position: fixed;
+  z-index: 100;
+}
+
+.modal.docked .modal-content {
+  overflow-y: scroll;
+  height: 100vh;
+  min-height: 100vh;
+}
+
+.modal.docked .modal-body {
+  padding-top: 90px;
+  padding-bottom: 72px;
+}
+
+.loader {
+  color: transparent !important;
+  pointer-events: none;
+  position: relative;
+}
+
+.loader:after {
+  -webkit-animation: spinAround 500ms infinite linear;
+          animation: spinAround 500ms infinite linear;
+  border: 2px solid #dbdbdb;
+  border-radius: 290486px;
+  border-right-color: transparent;
+  border-top-color: transparent;
+  content: "";
+  display: block;
+  width: 1em;
+  height: 1em;
+  position: relative;
+  position: absolute;
+  left: calc(50% - (1em / 2));
+  top: calc(50% - (1em / 2));
+  position: absolute !important;
+}
+
+@-webkit-keyframes spinAround {
+  from {
+    -webkit-transform: rotate(0deg);
+    transform: rotate(0deg);
+  }
+
+  to {
+    -webkit-transform: rotate(359deg);
+    transform: rotate(359deg);
+  }
+}
+
+@keyframes spinAround {
+  from {
+    -webkit-transform: rotate(0deg);
+    transform: rotate(0deg);
+  }
+
+  to {
+    -webkit-transform: rotate(359deg);
+    transform: rotate(359deg);
+  }
+}
+
