--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10177,7 +10177,7 @@ body {
   height: 30px;
   line-height: 30px;
   width: 30px;
-  background-color: #4186e0;
+  background-color: #7a6ff0;
   margin-right: 10px;
 }
 
@@ -10293,5 +10293,39 @@ body {
     -webkit-transform: rotate(359deg);
     transform: rotate(359deg);
   }
+}
+
+.user-nav {
+  left: -75px;
+}
+
+.left-box {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-align: center;
+      align-items: center;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  -webkit-box-align: center;
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
+}
+
+.right-box {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
 }
 
