--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -1,6 +1,3 @@
-
-// Fonts
-
 // Variables
 @import "variables";
 
@@ -58,7 +55,7 @@ body{
   height: 30px;
   line-height: 30px;
   width: 30px;
-  background-color: #4186e0;
+  background-color: #7a6ff0;
   margin-right: 10px;
 }
 .avatar.not-assigned {
@@ -151,4 +148,21 @@ body{
     -webkit-transform: rotate(359deg);
     transform: rotate(359deg);
   }
+}
+.user-nav{
+  left: -75px;
+}
+
+.left-box{
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  -webkit-box-align: center;
+  flex: 1;
+}
+.right-box{
+  display: flex;
+  align-items: center;
+  flex: 1;
+  justify-content: flex-end;
 }
