--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10322,3 +10322,29 @@ body {
           justify-content: flex-end;
 }
 
+.flex-center {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.is-transparent {
+  background-color: transparent !important;
+  background: transparent !important;
+}
+
+.no-shadow {
+  -webkit-box-shadow: none;
+          box-shadow: none;
+}
+
