--- a/resources/assets/sass/_variables.scss
+++ b/resources/assets/sass/_variables.scss
@@ -1,13 +1,13 @@
-$body-bg: #ebebeb;
+$body-bg: #e6ebf1;
 $font-family-base: Open Sans;
 $font-size-base: 0.9rem;
 
-$primary: #7746ec;
+$primary: #5969e2;
 
 $card-border-width: 0;
 $card-inner-border-radius: 5px;
 $card-cap-bg: #fff;
-$card-bg: #fafafa;
+$card-bg: #f6f9fc;
 
 $table-hover-bg: #f5f8fc;
 
