--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -5,10 +5,13 @@
 @import '~bootstrap/scss/bootstrap';
 @import "horizon";
 body{
-  font-family: 'Open Sans', sans-serif;
+  font-family: 'Camphor', sans-serif;
 }
+[v-cloak] { display:none; }
 .appbar{
   margin-bottom: 25px;
+  background: #e7ebf2 !important;
+  background-color: #e7ebf2 !important;
   .navbar-brand{
     color: #000;
     font-weight: bolder;
@@ -55,13 +58,17 @@ body{
   height: 30px;
   line-height: 30px;
   width: 30px;
-  background-color: #7a6ff0;
+  background-color: #5969e2;
   margin-right: 10px;
 }
 .avatar.not-assigned {
   background: transparent;
   color: #333;
   border: 1px dotted #343a40;
+}
+
+.btn{
+  box-shadow: 0 0 0 1px #e6ebf1, 0 2px 1px 0 rgba(67,69,139,.15), 0 2px 5px 0 rgba(50,50,93,.1), 0 1px 2px 0 rgba(0,0,0,.08), 0 0 0 0 transparent;
 }
 
 .navbar-icon {
@@ -175,4 +182,19 @@ body{
 }
 .no-shadow{
   box-shadow:none
+}
+.nav-search{
+    box-shadow: 0 0 0 1px rgba(49,49,93,.03), 0 2px 5px 0 rgba(49,49,93,.1), 0 1px 2px 0 rgba(0,0,0,.08);
+    border-radius: 4px;
+    font-weight: 400;
+    font-size: 14px;
+    color: #525f7f;
+    height: 32px;
+    border: none;
+    padding: 0 7px 0 15px;
+    width: 420px;
+    margin-top: 6px;
+}
+.modal .modal-content {
+    background: #f6f9fc;
 }
