--- a/resources/assets/sass/horizon.scss
+++ b/resources/assets/sass/horizon.scss
@@ -1,13 +1,19 @@
+
 .card {
-  box-shadow: 0 2px 3px rgba(0, 0, 0, .16);
+  box-shadow: 0 7px 14px 0 rgba(50,50,93,.1), 0 3px 6px 0 rgba(0,0,0,.07);
   .card-header {
     font-size: 1.1rem;
+    box-shadow: inset 0 -1px #e6ebf1;
+    border-top: 2px solid #3e396b;
   }
 }
-
+.card-header:first-child{
+  border-radius:0!important;
+}
 .modal {
   .modal-header {
     background: #fff;
+
   }
 
   .modal-content {
