added font and changed colors a bit

--- a/resources/assets/sass/_variables.scss
+++ b/resources/assets/sass/_variables.scss
@@ -2,7 +2,8 @@ $body-bg: #e6ebf1;
 $font-family-base: Open Sans;
 $font-size-base: 0.9rem;
 
-$primary: #5969e2;
+$primary: #6772E5;
+/*$success: #3ECF8E;*/
 
 $card-border-width: 0;
 $card-inner-border-radius: 5px;
